@@ -17,6 +17,8 @@ AC_HEADER_TIME
 
 CS_TEST_GCC3
 CS_TEST_SFFTOBMP
+CS_TEST_CAPI4LINUX
+
 CS_SET_DOCDIR
 
 AC_CHECK_LIB(capi20,capi20_register,,AC_MSG_ERROR(libcapi20 not found))
